feat: CORS configuration for server IP 104.198.238.114 and branch-summary integration
- Updated .env with proper CORS origins for server IP 104.198.238.114
- Added CORS_ALLOWED_ORIGINS for API Gateway compatibility
- Removed wildcard (*) from CORS origins to fix credentials issue

- Integrated BranchSummaryController endpoints into BranchController
  - New endpoints: /lifepill/v1/branch/summary/*
  - Deprecated old endpoints at /lifepill/v1/branch-summary/* for backward compatibility

- Updated SecurityConfig for all services with CORS support:
  - user-auth: Added CorsConfigurationSource injection
  - branch-service: Added environment-based CORS configuration
  - inventory-service: Added environment-based CORS configuration
  - identity-service: Updated to use environment variables

- Updated application.yml files for CORS in all services
- Added new API Gateway routes for branch summary endpoints